--- a/wiki/cs/User_hub.html
+++ b/wiki/cs/User_hub.html
@@ -14,7 +14,7 @@
 <li><a href="../ro/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="User hub (14% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../fi/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="User hub (4% translated)" lang="fi" dir="ltr">suomi</a></li>
 <li><a href="../sv/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="User hub (10% translated)" lang="sv" dir="ltr">svenska</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../bg/User_hub.html" class="mw-pt-progress mw-pt-progress--complete" title="&#1062;&#1077;&#1085;&#1090;&#1098;&#1088; &#1079;&#1072; &#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1080; (100% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
 <li><a href="../ru/User_hub.html" class="mw-pt-progress mw-pt-progress--high" title="&#1062;&#1077;&#1085;&#1090;&#1088; &#1087;&#1086;&#1083;&#1100;&#1079;&#1086;&#1074;&#1072;&#1090;&#1077;&#1083;&#1077;&#1081; (84% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="User hub (2% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
@@ -28,11 +28,8 @@
 <p><span typeof="mw:File"><a href="../index.php?title=User_hub.png&amp;filetimestamp=20190221145008&amp;.html" class="mw-file-description"><img src="../File/User_hub.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </p>
 <hr>
-<div class="mw-translate-fuzzy">
-<p>Tato &#269;&aacute;st je hlavn&iacute; n&aacute;pov&#283;da pro nov&aacute;&#269;ky ve FreeCADu.
-</p>
-</div>
-<p>FreeCAD je neust&aacute;le vyv&iacute;jen, tak&#382;e n&#283;kter&eacute; informace mohou b&yacute;t ne&uacute;pln&eacute; nebo zastaral&eacute;. Pokud nem&#367;&#382;ete naj&iacute;t informace, kter&eacute; pot&#345;ebujete, nev&aacute;hejte se zeptat na <a rel="nofollow" class="external text" href="https://forum.freecad.org">FreeCAD forum</a>.
+<p>Toto je hlavn&iacute; oblast n&aacute;pov&#283;dy pro nov&aacute;&#269;ky ve FreeCADu.
+</p><p>FreeCAD je neust&aacute;le vyv&iacute;jen, tak&#382;e n&#283;kter&eacute; informace mohou b&yacute;t ne&uacute;pln&eacute; nebo zastaral&eacute;. Pokud nem&#367;&#382;ete naj&iacute;t informace, kter&eacute; pot&#345;ebujete, nev&aacute;hejte se zeptat na <a rel="nofollow" class="external text" href="https://forum.freecad.org">FreeCAD forum</a>.
 </p><p>Pokud byste cht&#283;li p&#345;isp&#283;t k FreeCADu, pros&iacute;m <a href="../Donate.html" title="Donate">p&#345;isp&#283;jte</a> a pod&iacute;vejte se na str&aacute;nku <a href="../Help_FreeCAD.html" title="Help FreeCAD">Pomozte FreeCADu</a> kde najdete dal&scaron;&iacute; zp&#367;soby, jak p&#345;isp&#283;t. Pokud byste cht&#283;li editovat tuto wiki, p&#345;e&#269;t&#283;te si <a href="../WikiPages.html" title="WikiPages">WikiPages</a> kde najdete obecn&eacute; pokyny, kter&eacute; byste m&#283;li dodr&#382;ovat.
 </p><p>Pokud v&aacute;s zaj&iacute;m&aacute;, jak FreeCAD p&#345;ed lety vznikl, nav&scaron;tivte str&aacute;nku <a href="../History.html" title="History">Historie</a>.
 </p><p><span id="Using_FreeCAD"></span>
@@ -126,44 +123,44 @@
         <div class="NavContent mw-collapsible-content" style="margin: 10px; border: 1px solid var(--border-color-base, #aaaaaa); text-align: left; border-collapse: collapse; font-weight: normal; font-size: 100%; clear:both; margin-top: 1px; background-color: var(--background-color-neutral-subtle, #fefefe);">
 <ul><li><b><a href="../cs/Getting_started.html" title="Getting started/cs">Getting started</a></b></li>
 <li><b>Installation:</b> <a href="../cs/Download.html" title="Download/cs">Download</a>, <a href="../cs/Installing_on_Windows.html" title="Installing on Windows/cs">Windows</a>, <a href="../cs/Installing_on_Linux.html" title="Installing on Linux/cs">Linux</a>, <a href="../cs/Installing_on_Mac.html" title="Installing on Mac/cs">Mac</a>, <a href="../cs/Installing_additional_components.html" title="Installing additional components/cs">Additional components</a>, <a href="../cs/Compile_on_Docker.html" title="Compile on Docker/cs">Docker</a>, <a href="../index.php?title=AppImage/cs&amp;action=edit&amp;redlink=1.html" class="new" title="AppImage/cs (page does not exist)">AppImage</a>, <a href="../index.php?title=Ubuntu_Snap/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Ubuntu Snap/cs (page does not exist)">Ubuntu Snap</a></li>
-<li><b>Basics:</b> <a href="../cs/About_FreeCAD.html" title="About FreeCAD/cs">About FreeCAD</a>, <a href="../index.php?title=Interface/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Interface/cs (page does not exist)">Interface</a>, <a href="../cs/Mouse_navigation.html" title="Mouse navigation/cs">Mouse navigation</a>, <a href="../cs/Selection_methods.html" title="Selection methods/cs">Selection methods</a>, <a href="../index.php?title=Object_name/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Object name/cs (page does not exist)">Object name</a>, <a href="../cs/Preferences_Editor.html" title="Preferences Editor/cs">Preferences</a>, <a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>, <a href="../cs/Document_structure.html" title="Document structure/cs">Document structure</a>, <a href="../cs/Property.html" title="Property/cs">Properties</a>, <a href="../cs/Help_FreeCAD.html" title="Help FreeCAD/cs">Help FreeCAD</a>, <a href="../index.php?title=Donate/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/cs (page does not exist)">Donate</a></li></ul>
+<li><b>Basics:</b> <a href="../cs/About_FreeCAD.html" title="About FreeCAD/cs">About FreeCAD</a>, <a href="../cs/Interface.html" title="Interface/cs">Interface</a>, <a href="../cs/Mouse_navigation.html" title="Mouse navigation/cs">Mouse navigation</a>, <a href="../cs/Selection_methods.html" title="Selection methods/cs">Selection methods</a>, <a href="../index.php?title=Object_name/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Object name/cs (page does not exist)">Object name</a>, <a href="../cs/Preferences_Editor.html" title="Preferences Editor/cs">Preferences</a>, <a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>, <a href="../cs/Document_structure.html" title="Document structure/cs">Document structure</a>, <a href="../cs/Property.html" title="Property/cs">Properties</a>, <a href="../cs/Help_FreeCAD.html" title="Help FreeCAD/cs">Help FreeCAD</a>, <a href="../index.php?title=Donate/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/cs (page does not exist)">Donate</a></li></ul>
 <hr>
 <ul><li><b>Help:</b> <a href="../cs/Tutorials.html" title="Tutorials/cs">Tutorials</a>, <a href="../cs/Video_tutorials.html" title="Video tutorials/cs">Video tutorials</a></li>
 <li><b><a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>:</b> <a href="../cs/Std_Base.html" title="Std Base/cs">Std Base</a>, <a href="../index.php?title=Assembly_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/cs (page does not exist)">Assembly</a>, <a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">BIM</a>, <a href="../cs/CAM_Workbench.html" title="CAM Workbench/cs">CAM</a>, <a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">Draft</a>, <a href="../cs/FEM_Workbench.html" title="FEM Workbench/cs">FEM</a>, <a href="../cs/Inspection_Workbench.html" title="Inspection Workbench/cs">Inspection</a>, <a href="../cs/Material_Workbench.html" title="Material Workbench/cs">Material</a>, <a href="../cs/Mesh_Workbench.html" title="Mesh Workbench/cs">Mesh</a>, <a href="../cs/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/cs">OpenSCAD</a>, <a href="../cs/Part_Workbench.html" title="Part Workbench/cs">Part</a>, <a href="../cs/PartDesign_Workbench.html" title="PartDesign Workbench/cs">PartDesign</a>, <a href="../cs/Points_Workbench.html" title="Points Workbench/cs">Points</a>, <a href="../cs/Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench/cs">Reverse Engineering</a>, <a href="../cs/Robot_Workbench.html" title="Robot Workbench/cs">Robot</a>, <a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">Sketcher</a>, <a href="../cs/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/cs">Spreadsheet</a>, <a href="../cs/Surface_Workbench.html" title="Surface Workbench/cs">Surface</a>, <a href="../cs/TechDraw_Workbench.html" title="TechDraw Workbench/cs">TechDraw</a>, <a href="../cs/Testing.html" title="Testing/cs">Test Framework</a></li></ul>
 <hr>
-<ul><li><b><a href="../index.php?title=Addon/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Addon/cs (page does not exist)">Addons</a>:</b> <a href="../index.php?title=Std_AddonMgr/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std AddonMgr/cs (page does not exist)">Addon Manager</a>, <a href="../index.php?title=External_workbenches/cs&amp;action=edit&amp;redlink=1.html" class="new" title="External workbenches/cs (page does not exist)">External workbenches</a>, <a href="../cs/Scripting_and_macros.html" title="Scripting and macros/cs">Scripting and macros</a></li></ul>
+<ul><li><b><a href="../index.php?title=Addon/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Addon/cs (page does not exist)">Addons</a>:</b> <a href="../index.php?title=Std_AddonMgr/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std AddonMgr/cs (page does not exist)">Addon Manager</a>, <a href="../cs/External_workbenches.html" title="External workbenches/cs">External workbenches</a>, <a href="../cs/Scripting_and_macros.html" title="Scripting and macros/cs">Scripting and macros</a></li></ul>
 <hr>
 <ul><li><b>Hubs:</b> <a class="mw-selflink selflink">User hub</a>, <a href="../cs/Power_users_hub.html" title="Power users hub/cs">Power users hub</a>, <a href="../cs/Developer_hub.html" title="Developer hub/cs">Developer hub</a></li></ul></div>
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115165933
+Cached time: 20260120150822
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.119 seconds
-Real time usage: 0.195 seconds
-Preprocessor visited node count: 293/1000000
+CPU time usage: 0.120 seconds
+Real time usage: 0.381 seconds
+Preprocessor visited node count: 292/1000000
 Post&#8208;expand include size: 6635/2097152 bytes
 Template argument size: 2013/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4295/5000000 bytes
+Unstrip post&#8208;expand size: 4299/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.409      1 -total
- 44.44%    9.069      1 Template:Userdocnavi/cs
- 18.96%    3.869      1 Template:Navigation_menu_2
- 11.61%    2.369      2 Template:VersionMinus
- 10.81%    2.207      3 Template:Version
- 10.42%    2.126      1 Template:TOCright
-  9.50%    1.939      7 Template:Incode
-  6.92%    1.413      1 Template:Button
+100.00%   32.856      1 -total
+ 50.60%   16.624      1 Template:Userdocnavi/cs
+ 19.32%    6.348      1 Template:Navigation_menu_2
+ 11.01%    3.619      1 Template:Button
+  7.81%    2.566      7 Template:Incode
+  7.30%    2.399      1 Template:TOCright
+  6.92%    2.274      2 Template:VersionMinus
+  6.70%    2.203      3 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115165932 and revision id 1738863. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260120150821 and revision id 1741557. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
