--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -15,19 +15,19 @@
 <th class="ctOdd">Topic
 </th></tr>
 <tr>
-<td class="ctEven">Modeling
+<td class="ctEven">Modelov&aacute;n&iacute;
 </td></tr>
 <tr>
 <th class="ctOdd">Level
 </th></tr>
 <tr>
-<td class="ctEven">Beginner
+<td class="ctEven">Za&#269;&aacute;te&#269;n&iacute;k
 </td></tr>
 <tr>
 <th class="ctOdd">Time to complete
 </th></tr>
 <tr>
-<td class="ctEven">1 hour
+<td class="ctEven">1 hodina
 </td></tr>
 <tr>
 <th class="ctOdd">Authors
@@ -39,7 +39,7 @@
 <th class="ctOdd">FreeCAD version
 </th></tr>
 <tr>
-<td class="ctEven">0.19 or higher
+<td class="ctEven">0.19 nebo vy&scaron;&scaron;&iacute;
 </td></tr>
 <tr>
 <th class="ctOdd">Example files
@@ -51,7 +51,7 @@
 <th class="ctOdd">See also
 </th></tr>
 <tr>
-<td class="ctEven"><a href="../Basic_Part_Design_Tutorial.html" title="Basic Part Design Tutorial">Basic Part Design Tutorial</a>
+<td class="ctEven"><a href="../Basic_Part_Design_Tutorial.html" title="Basic Part Design Tutorial">Z&aacute;kladn&iacute; n&aacute;vod k n&aacute;vrhu d&iacute;lu</a>
 </td></tr>
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
@@ -397,15 +397,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120151546
+Cached time: 20260120151733
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.279 seconds
-Real time usage: 0.490 seconds
+Real time usage: 0.483 seconds
 Preprocessor visited node count: 828/1000000
-Post&#8208;expand include size: 41776/2097152 bytes
-Template argument size: 11538/2097152 bytes
+Post&#8208;expand include size: 41799/2097152 bytes
+Template argument size: 11561/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -413,19 +413,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   83.763      1 -total
- 26.90%   22.532      1 Template:Sketcher_Tools_navi/cs
- 14.10%   11.807      1 Template:Userdocnavi/cs
- 13.92%   11.663      1 Template:PartDesign_Tools_navi/cs
- 12.46%   10.437      3 Template:Navigation_menu_2
- 10.87%    9.106      1 Template:TutorialInfo
-  7.24%    6.068      5 Template:Clear
-  5.89%    4.935      3 Template:CheckBox
-  5.53%    4.633     19 Template:Button
-  4.00%    3.348      1 Template:Version
+100.00%   63.214      1 -total
+ 21.30%   13.462      1 Template:PartDesign_Tools_navi/cs
+ 20.48%   12.949      1 Template:Sketcher_Tools_navi/cs
+ 16.47%   10.412      1 Template:Version
+ 15.73%    9.942      3 Template:Navigation_menu_2
+  9.66%    6.106      1 Template:Userdocnavi/cs
+  6.91%    4.365      7 Template:ComboBox
+  6.17%    3.900      1 Template:TutorialInfo
+  5.23%    3.306      3 Template:CheckBox
+  2.76%    1.746     19 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120151545 and revision id 1741559. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120151732 and revision id 1741561. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
