--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -102,7 +102,7 @@
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=Pd_tut_rect_h_dim_end.png&amp;filetimestamp=20221024083656&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_rect_h_dim_end.png" decoding="async" width="300" height="221" class="mw-file-element" data-file-width="450" data-file-height="332"></a><figcaption>Fig: MS4</figcaption></figure>
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=Pd_tut_rect04.png&amp;filetimestamp=20221024081359&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_rect04.png" decoding="async" width="300" height="225" class="mw-file-element" data-file-width="400" data-file-height="300"></a><figcaption>Fig: MS5</figcaption></figure>
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=Pd_tut_rect_v3.png&amp;filetimestamp=20221024084029&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_rect_v3.png" decoding="async" width="300" height="222" class="mw-file-element" data-file-width="405" data-file-height="300"></a><figcaption>Fig: MS6</figcaption></figure>
-<p><b>Step A: Create the sketch</b>
+<p><b>Krok A: Vytvo&#345;en&iacute; n&aacute;&#269;rtu</b>
 </p>
 <ol><li>Click <span typeof="mw:File"><a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch">Create sketch</a>. This will create the sketch within the just created body. It will be named <b>Sketch</b>.</li>
 <li>A task panel like <b>Fig: MS1</b> will open where you have to choose to which plane the sketch will be attached.
@@ -403,12 +403,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120160016
+Cached time: 20260120160121
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.317 seconds
-Real time usage: 0.442 seconds
+CPU time usage: 0.255 seconds
+Real time usage: 0.336 seconds
 Preprocessor visited node count: 832/1000000
 Post&#8208;expand include size: 41803/2097152 bytes
 Template argument size: 11563/2097152 bytes
@@ -419,19 +419,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   72.880      1 -total
- 25.30%   18.436      1 Template:PartDesign_Tools_navi/cs
- 18.99%   13.839      3 Template:Navigation_menu_2
- 15.21%   11.088      3 Template:CheckBox
- 13.82%   10.071      1 Template:Sketcher_Tools_navi/cs
-  8.00%    5.830      1 Template:Userdocnavi/cs
-  7.13%    5.194      8 Template:KEY
-  7.03%    5.123      7 Template:ComboBox
-  5.40%    3.936      1 Template:Version
-  4.11%    2.998     19 Template:Button
+100.00%   45.842      1 -total
+ 20.10%    9.212      1 Template:PartDesign_Tools_navi/cs
+ 16.32%    7.482      3 Template:Navigation_menu_2
+ 16.30%    7.474      1 Template:Sketcher_Tools_navi/cs
+ 13.73%    6.292      1 Template:Userdocnavi/cs
+  9.91%    4.544      3 Template:CheckBox
+  6.96%    3.193      7 Template:ComboBox
+  5.99%    2.747     19 Template:Button
+  5.53%    2.533      8 Template:KEY
+  5.27%    2.414      1 Template:TutorialInfo
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120160016 and revision id 1741591. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120160121 and revision id 1741593. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
