--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -110,7 +110,7 @@
 <li>Klikn&#283;te na <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol></li>
 <li>FreeCAD se automaticky p&#345;epne na <span typeof="mw:File"><a href="../Sketcher_Workbench.html" title="Sketcher Workbench"><img src="../File/Workbench_Sketcher.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">pracovn&iacute; plochu Sketcher</a>.</li>
 <li>N&aacute;&#269;rt se otev&#345;e v re&#382;imu &uacute;prav: uvid&iacute;te n&#283;co jako na <b>Obr.: MS2</b>. Je zde zn&aacute;zorn&#283;na osa X (&#269;erven&aacute; &#269;&aacute;ra) a osa Y (zelen&aacute; &#269;&aacute;ra) n&aacute;&#269;rtu, stejn&#283; jako jeho po&#269;&aacute;tek (&#269;erven&yacute; bod).</li></ol>
-<p><b>Step B: Add geometry</b>
+<p><b>Krok B: P&#345;id&aacute;n&iacute; geometrie</b>
 </p>
 <ol><li>Click <span typeof="mw:File"><a href="../Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle"><img src="../File/Sketcher_CreateRectangle.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle">Create rectangle</a>.</li>
 <li>While the tool is active the cursor has this appearance:<br><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Pd_tut_rec_cursor.png&amp;filetimestamp=20221023110422&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_rec_cursor.png" decoding="async" width="154" height="50" class="mw-file-element" data-file-width="154" data-file-height="50"></a></span></li>
@@ -403,12 +403,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120160733
+Cached time: 20260120160800
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.317 seconds
-Real time usage: 1.227 seconds
+CPU time usage: 0.275 seconds
+Real time usage: 0.639 seconds
 Preprocessor visited node count: 832/1000000
 Post&#8208;expand include size: 41803/2097152 bytes
 Template argument size: 11563/2097152 bytes
@@ -419,19 +419,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   89.010      1 -total
- 21.49%   19.125      1 Template:Userdocnavi/cs
- 20.98%   18.678      1 Template:Sketcher_Tools_navi/cs
- 20.00%   17.801      3 Template:Navigation_menu_2
- 16.75%   14.907      1 Template:PartDesign_Tools_navi/cs
- 11.21%    9.980     19 Template:Button
-  5.83%    5.193      1 Template:Version
-  5.78%    5.141      3 Template:CheckBox
-  5.13%    4.563      1 Template:TutorialInfo
-  3.78%    3.361      7 Template:ComboBox
+100.00%   62.755      1 -total
+ 32.36%   20.305      1 Template:PartDesign_Tools_navi/cs
+ 27.71%   17.392      3 Template:Navigation_menu_2
+ 16.01%   10.050      1 Template:Userdocnavi/cs
+ 10.50%    6.588      1 Template:Sketcher_Tools_navi/cs
+  7.68%    4.820      5 Template:Clear
+  6.22%    3.904     19 Template:Button
+  5.99%    3.762      1 Template:TutorialInfo
+  4.26%    2.674      7 Template:ComboBox
+  4.02%    2.521      3 Template:CheckBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120160731 and revision id 1741595. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120160759 and revision id 1741597. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
