--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -112,12 +112,12 @@
 <li>N&aacute;&#269;rt se otev&#345;e v re&#382;imu &uacute;prav: uvid&iacute;te n&#283;co jako na <b>Obr.: MS2</b>. Je zde zn&aacute;zorn&#283;na osa X (&#269;erven&aacute; &#269;&aacute;ra) a osa Y (zelen&aacute; &#269;&aacute;ra) n&aacute;&#269;rtu, stejn&#283; jako jeho po&#269;&aacute;tek (&#269;erven&yacute; bod).</li></ol>
 <p><b>Krok B: P&#345;id&aacute;n&iacute; geometrie</b>
 </p>
-<ol><li>Click <span typeof="mw:File"><a href="../Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle"><img src="../File/Sketcher_CreateRectangle.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle">Create rectangle</a>.</li>
-<li>While the tool is active the cursor has this appearance:<br><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Pd_tut_rec_cursor.png&amp;filetimestamp=20221023110422&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_rec_cursor.png" decoding="async" width="154" height="50" class="mw-file-element" data-file-width="154" data-file-height="50"></a></span></li>
-<li>Pick two points to create a rectangle roughly centered around the <b>Y axis</b> similar to <b>Fig: MS3</b>. Note:
-<ul><li>Don't place points on an axis as the Solver will automatically apply constraints that will create problems later.</li>
-<li>The dimensions of the rectangle are unimportant at this point. They will be assigned using constraints in a later step.</li></ul></li>
-<li>Once done, press <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Esc</span> or right-click to exit the tool.</li></ol>
+<ol><li>Klikn&#283;te na <span typeof="mw:File"><a href="../Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle"><img src="../File/Sketcher_CreateRectangle.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle">Vytvo&#345;it obd&eacute;ln&iacute;k</a>.</li>
+<li>Kdy&#382; je n&aacute;stroj aktivn&iacute;, kurzor m&aacute; tento vzhled:<br><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Pd_tut_rec_cursor.png&amp;filetimestamp=20221023110422&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_rec_cursor.png" decoding="async" width="154" height="50" class="mw-file-element" data-file-width="154" data-file-height="50"></a></span></li>
+<li>Vyberte dva body a vytvo&#345;te obd&eacute;ln&iacute;k p&#345;ibli&#382;n&#283; ve st&#345;edu kolem <b>osy Y</b> podobn&#283; jako na <b>Obr.: MS3</b>. Pozn&aacute;mka:
+<ul><li>Neum&iacute;s&#357;ujte body na osy, proto&#382;e &#345;e&scaron;i&#269; automaticky pou&#382;ije vazby, kter&eacute; pozd&#283;ji zp&#367;sob&iacute; probl&eacute;my.</li>
+<li>Rozm&#283;ry obd&eacute;ln&iacute;ku nejsou v t&eacute;to chv&iacute;li d&#367;le&#382;it&eacute;. Budou p&#345;i&#345;azeny pomoc&iacute; vazeb v pozd&#283;j&scaron;&iacute;m kroku.</li></ul></li>
+<li>Po dokon&#269;en&iacute; stiskn&#283;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Esc</span> nebo klikn&#283;te prav&yacute;m tla&#269;&iacute;tkem my&scaron;i a ukon&#269;ete n&aacute;stroj.</li></ol>
 <p><b>Step C: Assign a horizontal distance constraint</b>
 </p>
 <ol><li>Select the line defined by <b>P2</b> and <b>P3</b> in <b>Fig: MS3</b>. The labels like P1, P2 etc. will not appear in sketches, they were added for reference in the images of this tutorial.</li>
@@ -403,12 +403,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120160800
+Cached time: 20260120161229
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.275 seconds
-Real time usage: 0.639 seconds
+CPU time usage: 0.314 seconds
+Real time usage: 0.699 seconds
 Preprocessor visited node count: 832/1000000
 Post&#8208;expand include size: 41803/2097152 bytes
 Template argument size: 11563/2097152 bytes
@@ -419,19 +419,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   62.755      1 -total
- 32.36%   20.305      1 Template:PartDesign_Tools_navi/cs
- 27.71%   17.392      3 Template:Navigation_menu_2
- 16.01%   10.050      1 Template:Userdocnavi/cs
- 10.50%    6.588      1 Template:Sketcher_Tools_navi/cs
-  7.68%    4.820      5 Template:Clear
-  6.22%    3.904     19 Template:Button
-  5.99%    3.762      1 Template:TutorialInfo
-  4.26%    2.674      7 Template:ComboBox
-  4.02%    2.521      3 Template:CheckBox
+100.00%   85.386      1 -total
+ 32.39%   27.653      1 Template:Sketcher_Tools_navi/cs
+ 22.55%   19.258      3 Template:Navigation_menu_2
+ 18.24%   15.571      1 Template:PartDesign_Tools_navi/cs
+ 15.68%   13.385      1 Template:Userdocnavi/cs
+  4.87%    4.157     19 Template:Button
+  4.73%    4.041      1 Template:Version
+  4.59%    3.921      7 Template:ComboBox
+  4.25%    3.626      3 Template:CheckBox
+  3.94%    3.367      1 Template:TutorialInfo
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120160759 and revision id 1741597. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120161228 and revision id 1741599. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
