--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -118,7 +118,7 @@
 <ul><li>Neum&iacute;s&#357;ujte body na osy, proto&#382;e &#345;e&scaron;i&#269; automaticky pou&#382;ije vazby, kter&eacute; pozd&#283;ji zp&#367;sob&iacute; probl&eacute;my.</li>
 <li>Rozm&#283;ry obd&eacute;ln&iacute;ku nejsou v t&eacute;to chv&iacute;li d&#367;le&#382;it&eacute;. Budou p&#345;i&#345;azeny pomoc&iacute; vazeb v pozd&#283;j&scaron;&iacute;m kroku.</li></ul></li>
 <li>Po dokon&#269;en&iacute; stiskn&#283;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Esc</span> nebo klikn&#283;te prav&yacute;m tla&#269;&iacute;tkem my&scaron;i a ukon&#269;ete n&aacute;stroj.</li></ol>
-<p><b>Step C: Assign a horizontal distance constraint</b>
+<p><b>Krok C: P&#345;i&#345;azen&iacute; vazby vodorovn&eacute; vzd&aacute;lenosti</b>
 </p>
 <ol><li>Select the line defined by <b>P2</b> and <b>P3</b> in <b>Fig: MS3</b>. The labels like P1, P2 etc. will not appear in sketches, they were added for reference in the images of this tutorial.</li>
 <li>Click <span typeof="mw:File"><a href="../Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX"><img src="../File/Sketcher_ConstrainDistanceX.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">Horizontal distance constraint</a>:
@@ -403,12 +403,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120161229
+Cached time: 20260120161407
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.314 seconds
-Real time usage: 0.699 seconds
+CPU time usage: 0.332 seconds
+Real time usage: 1.181 seconds
 Preprocessor visited node count: 832/1000000
 Post&#8208;expand include size: 41803/2097152 bytes
 Template argument size: 11563/2097152 bytes
@@ -419,19 +419,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   85.386      1 -total
- 32.39%   27.653      1 Template:Sketcher_Tools_navi/cs
- 22.55%   19.258      3 Template:Navigation_menu_2
- 18.24%   15.571      1 Template:PartDesign_Tools_navi/cs
- 15.68%   13.385      1 Template:Userdocnavi/cs
-  4.87%    4.157     19 Template:Button
-  4.73%    4.041      1 Template:Version
-  4.59%    3.921      7 Template:ComboBox
-  4.25%    3.626      3 Template:CheckBox
-  3.94%    3.367      1 Template:TutorialInfo
+100.00%  176.586      1 -total
+ 18.28%   32.287      1 Template:PartDesign_Tools_navi/cs
+ 18.10%   31.967      1 Template:Userdocnavi/cs
+ 13.54%   23.914      1 Template:Sketcher_Tools_navi/cs
+ 10.80%   19.069      3 Template:Navigation_menu_2
+  7.47%   13.185      5 Template:Clear
+  7.04%   12.436      3 Template:CheckBox
+  6.89%   12.162     19 Template:Button
+  5.78%   10.208      1 Template:TutorialInfo
+  3.38%    5.964      8 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120161228 and revision id 1741599. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120161405 and revision id 1741601. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
